CustomerServiceTest Initial Stage Finished